# GERPED-PLUS

./: .coverage  .dockerignore  .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  DIAGNOSTICO_MODULO_COLETAS.md  DIAGNOSTICO_PEDIDO_128.md  Dockerfile  Makefile  RELATORIO_DIAGNOSTICO_OCR.md  SECURITY.md  TESTE_RAPIDO_OCR.sh  analise_qualidade_codigo.py  audit_fase2.sh  auto_git_commit.py  bandit_report.txt  com.sistema-gerped.autocommit.plist  com.sistema-gerped.backup.plist  config.py  coverage.xml  dump.rdb  limpeza_arquivos.py  package.json  pyproject.toml  relatorio_seguranca_dependencias.json  requirements-dev.txt  requirements.in  requirements.txt  run.py  run_autocommit.sh  test_ocr_diagnostico.py  test_rbac_security.py  worker.py
.ssh_codex/: ovh_gerpedplus_ed25519  ovh_gerpedplus_ed25519.pub
auditoria/: PLANO_ACAO_RISCO_BAIXO.md  QUICK_START.md  aplicar_correcoes.py  go_live_report.json  pentest_zap_relatorio.html  pentest_zap_resumo.json  pentest_zap_vulnerabilidades.json  security_audit.py
backup_docs_20251022_211743/: AUDIT_REPORT.md  CORRECAO_PEDIDO_128.md
data/: comprovantes_dataset.json  comprovantes_dataset.jsonl  pedido_id_mapping.csv
docs/: ANALISE_LANCAR_PAGAMENTOS.md  DEPLOY_POLICY.md  FASE10_IMPLEMENTACAO_COMPLETA.md  FASE4_COMPLETA_CERTIFICADO.md  FASE4_RESULTADO_VISUAL.txt  FASE4_SUMARIO_VISUAL_FINAL.txt  FASE5_IMPLEMENTACAO_COMPLETA.md  FASE6_IMPLEMENTACAO_COMPLETA.md  FASE7_FILA_ASSINCRONA.md  FASE8_IMPLEMENTACAO_COMPLETA.md  FASE9_IMPLEMENTACAO_COMPLETA.md  FLUXO_FINANCEIRO_COLETA.md  GO_LIVE_CHECKLIST.md  NEON_SETUP.md  (+11 more)
(+184 files in other folders)
