[project]
name = "gerped-sistema"
version = "2.0.0"
description = "Sistema de Gestão Empresarial GERPED"
authors = [{name = "Sistema GERPED"}]
requires-python = ">=3.9"

[tool.bandit]
exclude_dirs = ["/tests/", "/venv/", "/node_modules/"]
skips = ["B201", "B601"]  # B201: Flask debug (OK em dev), B601: shell=True (controlado)

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "smoke: Smoke tests",
    "security: Security tests",
]
filterwarnings = [
    "ignore:Using the in-memory storage for tracking rate limits:UserWarning:flask_limiter.*",
    "ignore:The '__version__' attribute is deprecated:DeprecationWarning:flask.testing",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  | venv
  | node_modules
  | \.git
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pydocstyle]
add-ignore = ["D1"]
